--- a/index.html
+++ b/index.html
@@ -263,6 +263,16 @@
                 </div>
               </div>
             </div>
+            <div class="col-sm-12">
+              <a
+                href="https://api.whatsapp.com/send/?phone=2348106056545&app_absent=0"
+                target="_blank"
+                class="btn btn-fill wow fadeInUp"
+                data-wow-duration="0.8s"
+                data-wow-delay="0.4s"
+                >Live Chat Now
+              </a>
+            </div>
           </div>
         </div>
       </div>
