adds WordPress to skills

--- a/index.html
+++ b/index.html
@@ -434,6 +434,17 @@
                       </div>
                     </div>
                   </div>
+                  <div class="candidatos">
+                    <div class="parcial">
+                      <div class="info">
+                        <div class="nome">WordPress</div>
+                        <div class="percentagem-num">80%</div>
+                      </div>
+                      <div class="progressBar">
+                        <div class="percentagem" style="width: 80%"></div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
