adds target blank to the social media handles

--- a/index.html
+++ b/index.html
@@ -224,30 +224,25 @@
                   data-wow-delay="0.7s"
                 >
                   <li>
-                    <a href="https://fb.com/darlington.gospel01"
-                      ><i class="fa fa-facebook"></i
-                    ></a>
+                    <a href="https://fb.com/darlington.gospel01" target="_blank">
+                      <i class="fa fa-facebook"></i></a>
                   </li>
                   <li>
-                    <a href="https://twitter.com/idaltonic"
-                      ><i class="fa fa-twitter"></i
-                    ></a>
+                    <a href="https://twitter.com/idaltonic" target="_blank">
+                      <i class="fa fa-twitter"></i></a>
                   </li>
                   <li>
-                    <a href="https://github.com/Daltonic"
-                      ><i class="fa fa-github"></i
-                    ></a>
+                    <a href="https://github.com/Daltonic" target="_blank">
+                      <i class="fa fa-github"></i></a>
                   </li>
                   <li>
                     <a
-                      href="https://www.linkedin.com/in/darlington-gospel-aa626b125/"
-                      ><i class="fa fa-linkedin"></i
-                    ></a>
+                      href="https://www.linkedin.com/in/darlington-gospel-aa626b125" target="_blank">
+                      <i class="fa fa-linkedin"></i></a>
                   </li>
                   <li>
-                    <a href="https://medium.com/@daltonic"
-                      ><i class="fa fa-medium"></i
-                    ></a>
+                    <a href="https://darlingtongospel.medium.com/" target="_blank">
+                      <i class="fa fa-medium"></i></a>
                   </li>
                 </ul>
               </div>
@@ -932,30 +927,30 @@
                 <div class="col-sm-6">
                   <ul class="social-icon">
                     <li>
-                      <a href="https://fb.com/darlington.gospel01"
-                        ><i class="fa fa-facebook"></i
-                      ></a>
+                      <a href="https://fb.com/darlington.gospel01" target="_blank">
+                        <i class="fa fa-facebook"></i>
+                      </a>
                     </li>
                     <li>
-                      <a href="https://twitter.com/idaltonic"
-                        ><i class="fa fa-twitter"></i
-                      ></a>
+                      <a href="https://twitter.com/idaltonic" target="_blank">
+                        <i class="fa fa-twitter"></i>
+                      </a>
                     </li>
                     <li>
-                      <a href="https://github.com/Daltonic"
-                        ><i class="fa fa-github"></i
-                      ></a>
+                      <a href="https://github.com/Daltonic" target="_blank">
+                        <i class="fa fa-github"></i>
+                      </a>
                     </li>
                     <li>
                       <a
-                        href="https://www.linkedin.com/in/darlington-gospel-aa626b125/"
-                        ><i class="fa fa-linkedin"></i
-                      ></a>
+                        href="https://www.linkedin.com/in/darlington-gospel-aa626b125" target="_blank">
+                        <i class="fa fa-linkedin"></i>
+                      </a>
                     </li>
                     <li>
-                      <a href="https://medium.com/@daltonic"
-                        ><i class="fa fa-medium"></i
-                      ></a>
+                      <a href="https://darlingtongospel.medium.com/" target="_blank">
+                        <i class="fa fa-medium"></i>
+                      </a>
                     </li>
                   </ul>
                 </div>
