--- a/index.html
+++ b/index.html
@@ -245,6 +245,14 @@
                       <i class="fa fa-medium"></i></a>
                   </li>
                 </ul>
+                <a
+                href="https://api.whatsapp.com/send/?phone=2348106056545&app_absent=0"
+                target="_blank"
+                class="btn btn-fill wow fadeInUp mt-3"
+                data-wow-duration="0.8s"
+                data-wow-delay="0.4s"
+                >Live Chat Now
+              </a>
               </div>
             </div>
             <div class="col-sm-6">
@@ -257,16 +265,6 @@
                   <img src="assets/images/hero.png" alt="" class="img-fluid" />
                 </div>
               </div>
-            </div>
-            <div class="col-sm-12">
-              <a
-                href="https://api.whatsapp.com/send/?phone=2348106056545&app_absent=0"
-                target="_blank"
-                class="btn btn-fill wow fadeInUp"
-                data-wow-duration="0.8s"
-                data-wow-delay="0.4s"
-                >Live Chat Now
-              </a>
             </div>
           </div>
         </div>
