restructures the chat now btn

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </ul>
 
                 <ul
-                  class="social-icon wow fadeInUp"
+                  class="social-icon wow fadeInUp w-100"
                   data-wow-duration="0.8s"
                   data-wow-delay="0.7s"
                 >
