adds conditions to the nav links

--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#mh-experience">Experiences</a>
                 </li>
-                <li class="nav-item">
+                <li v-if="loaded" class="nav-item">
                   <a class="nav-link" href="#mh-portfolio">Portfolio</a>
                 </li>
-                <li class="nav-item">
+                <li v-if="loaded" class="nav-item">
                     <a class="nav-link" href="#mh-blog">Blog</a>
                 </li>
                 <li class="nav-item">
