Updates the resume and position title

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                   data-wow-duration="0.8s"
                   data-wow-delay="0.3s"
                 >
-                  Software Developer
+                  Software Engineer
                 </h4>
 
                 <ul>
