Adds my services to portfolio

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
-      href="assets/icons/font-awesome-4.7.0/css/font-awesome.min.css"
+      href="assets/icons/fontawesome/css/all.css"
     />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/plugins/css/bootstrap.min.css" />
@@ -126,6 +126,9 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#mh-about">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#mh-service">Services</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#mh-skills">Skills</a>
@@ -352,6 +355,51 @@
        SERVICE
     ===================
     -->
+    <section class="mh-service">
+        <div class="container">
+            <div class="row section-separator">
+                <div class="col-sm-12 text-center section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
+                    <h2>What I do</h2>
+                </div>
+                <div class="col-md-4 col-sm-12 text-center">
+                    <div class="mh-service-item shadow-1 dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
+                        <i class="fa fa-code iron-color"></i>
+                        <h3>Software Development</h3>
+                        <p>
+                            Do you have a software UI/UX prototype? At a reasonable cost, I will assist you in translating your ideas into real-world solutions.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 text-center">
+                    <div class="mh-service-item shadow-1 dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
+                        <i class="fa fa-feather purple-color"></i>
+                        <h3>Technical Writing</h3>
+                        <p>
+                            Do you want people to buy your software? I have a track record of demonstrating tech products to a diverse range of online audiences.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 text-center">
+                    <div class="mh-service-item shadow-1 dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
+                        <i class="fa fa-user-graduate sky-color"></i>
+                        <h3>Code Mentorship</h3>
+                        <p>
+                            Do you want to learn to code from the ground up? With a flexible schedule, I will take you from a complete beginner to a master.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+            	<a
+                href="https://api.whatsapp.com/send/?phone=2348106056545&app_absent=0"
+                target="_blank"
+                class="btn btn-fill wow fadeInUp mt-3"
+                data-wow-duration="0.8s"
+                data-wow-delay="0.4s"
+                >WhatsApp Me Now</a>
+            </div>
+        </div>
+     </section>   
 
     <!--
     ===================
@@ -376,17 +424,6 @@
                   <div class="candidatos">
                     <div class="parcial">
                       <div class="info">
-                        <div class="nome">Javascript</div>
-                        <div class="percentagem-num">84%</div>
-                      </div>
-                      <div class="progressBar">
-                        <div class="percentagem" style="width: 84%"></div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="candidatos">
-                    <div class="parcial">
-                      <div class="info">
                         <div class="nome">HTML</div>
                         <div class="percentagem-num">90%</div>
                       </div>
@@ -403,6 +440,17 @@
                       </div>
                       <div class="progressBar">
                         <div class="percentagem" style="width: 87%"></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="candidatos">
+                    <div class="parcial">
+                      <div class="info">
+                        <div class="nome">Javascript</div>
+                        <div class="percentagem-num">94%</div>
+                      </div>
+                      <div class="progressBar">
+                        <div class="percentagem" style="width: 94%"></div>
                       </div>
                     </div>
                   </div>
