Adds a services section on the portfolio site

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
-      href="assets/icons/fontawesome/css/all.css"
+      href="./assets/icons/fontawesome/css/all.css"
     />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/plugins/css/bootstrap.min.css" />
