Changes Fontawesome from local to cdn

--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
       rel="stylesheet"
     />
     <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="./assets/icons/fontawesome/css/all.css"
-    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/plugins/css/bootstrap.min.css" />
     <!-- Animate CSS-->
@@ -361,7 +358,7 @@
                 <div class="col-sm-12 text-center section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
                     <h2>What I do</h2>
                 </div>
-                <div class="col-md-4 col-sm-12 text-center">
+                <div class="col-md-4 col-sm-12">
                     <div class="mh-service-item shadow-1 dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
                         <i class="fa fa-code iron-color"></i>
                         <h3>Software Development</h3>
@@ -370,7 +367,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12 text-center">
+                <div class="col-md-4 col-sm-12">
                     <div class="mh-service-item shadow-1 dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                         <i class="fa fa-feather purple-color"></i>
                         <h3>Technical Writing</h3>
@@ -379,7 +376,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12 text-center">
+                <div class="col-md-4 col-sm-12">
                     <div class="mh-service-item shadow-1 dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
                         <i class="fa fa-user-graduate sky-color"></i>
                         <h3>Code Mentorship</h3>
