Adds a description meta tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <meta name="title" content="Darlington Gospel Portfolio" />
     <meta
       name="description"
-      content="Take a look at my portfolio here in my site."
+      content="Gospel Darlington kick-started his journey as a software engineer in 2016.
+      Over the years, he has grown full-blown skills in
+      JavaScript stacks such as React,
+      ReactNative, VueJs, and more. Connect with him today!"
     />
     <meta name="keywords" content="Portfolio, Resume, Experiences" />
 
@@ -358,7 +361,7 @@
                 <div class="col-sm-12 text-center section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
                     <h2>What I do</h2>
                 </div>
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-4 col-sm-12 text-center">
                     <div class="mh-service-item shadow-1 dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
                         <i class="fa fa-code iron-color"></i>
                         <h3>Software Development</h3>
@@ -367,7 +370,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-4 col-sm-12 text-center">
                     <div class="mh-service-item shadow-1 dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                         <i class="fa fa-feather purple-color"></i>
                         <h3>Technical Writing</h3>
@@ -376,7 +379,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-4 col-sm-12 text-center">
                     <div class="mh-service-item shadow-1 dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
                         <i class="fa fa-user-graduate sky-color"></i>
                         <h3>Code Mentorship</h3>
