updates the services

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
        SERVICE
     ===================
     -->
-    <section class="mh-service">
+    <section class="mh-service" id="mh-service">
         <div class="container">
             <div class="row section-separator">
                 <div class="col-sm-12 text-center section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
@@ -382,9 +382,9 @@
                 <div class="col-md-4 col-sm-12 text-center">
                     <div class="mh-service-item shadow-1 dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
                         <i class="fa fa-user-graduate sky-color"></i>
-                        <h3>Code Mentorship</h3>
+                        <h3>Code Instructorship</h3>
                         <p>
-                            Do you want to learn to code from the ground up? With a flexible schedule, I will take you from a complete beginner to a master.
+                          Do you want to learn coding in one-on-one mentorship sessions? I will take you from a complete beginner to a master using a flexible schedule.
                         </p>
                     </div>
                 </div>
@@ -828,6 +828,8 @@
             </div>
         </div>
     </section>
+
+
 
     <!--
     ===================
