Made the services better

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                         <i class="fa fa-code iron-color"></i>
                         <h3>Software Development</h3>
                         <p>
-                            Do you have a software UI/UX prototype? At a reasonable cost, I will assist you in translating your ideas into real-world solutions.
+                          Do you have a designed UI/UX prototype? At a reasonable cost, I will assist you to translate your ideas from Figma or Adobe XD into a real-world solution.
                         </p>
                     </div>
                 </div>
@@ -375,7 +375,7 @@
                         <i class="fa fa-feather purple-color"></i>
                         <h3>Technical Writing</h3>
                         <p>
-                            Do you want people to buy your software? I have a track record of demonstrating tech products to a diverse range of online audiences.
+                          Are you ready to exemplify your product to your prospective users? I have a track record of demonstrating tech products to a diverse range of online audiences.
                         </p>
                     </div>
                 </div>
@@ -384,7 +384,7 @@
                         <i class="fa fa-user-graduate sky-color"></i>
                         <h3>Code Instructorship</h3>
                         <p>
-                          Do you want to learn coding in one-on-one mentorship sessions? I will take you from a complete beginner to a master using a flexible schedule.
+                          Do you want to learn coding in a one-on-one mentorship session? I will privately coach you from a complete beginner to a master at a flexible schedule.
                         </p>
                     </div>
                 </div>
