updates view, adds hire me button

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     data-wow-delay="0.5s"
                   >
                     <i class="fa fa-phone"></i
-                    ><a href="callto:">(+234) 810 605 6545</a>
+                    ><a href="callto:">+234 810 605 6545</a>
                   </li>
                   <li
                     class="wow fadeInUp"
@@ -257,8 +257,15 @@
                 class="btn btn-fill wow fadeInUp mt-3"
                 data-wow-duration="0.8s"
                 data-wow-delay="0.4s"
-                >Live Chat Now
+                >WhatsApp Me
               </a>
+              <a
+                  href="mailto:darlingtongospel@gmail.com?body=Hi Daltonic, I was browsing your website and wanted to connect.&subject=Partnership Proposal"
+                  target="_blank"
+                  class="btn btn-border wow fadeInUp mt-3 ml-3"
+                  data-wow-duration="0.8s"
+                  data-wow-delay="0.4s"
+                  >Hire Me</a>
               </div>
             </div>
             <div class="col-sm-6">
@@ -394,12 +401,12 @@
             </div>
             <div class="text-center">
             	<a
-                href="https://api.whatsapp.com/send/?phone=2348106056545&app_absent=0"
+                href="mailto:darlingtongospel@gmail.com?body=Hi Daltonic, I was browsing your website and wanted to connect.&subject=Partnership Proposal"
                 target="_blank"
                 class="btn btn-fill wow fadeInUp mt-3"
                 data-wow-duration="0.8s"
                 data-wow-delay="0.4s"
-                >WhatsApp Me Now</a>
+                >Hire Me</a>
             </div>
         </div>
      </section>   
@@ -651,6 +658,15 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="text-center">
+            <a
+              href="mailto:darlingtongospel@gmail.com?body=Hi Daltonic, I was browsing your website and wanted to connect.&subject=Partnership Proposal"
+              target="_blank"
+              class="btn btn-fill wow fadeInUp mt-3"
+              data-wow-duration="0.8s"
+              data-wow-delay="0.4s"
+              >Hire Me</a>
           </div>
         </div>
       </div>
