removes the contact form

--- a/index.html
+++ b/index.html
@@ -145,9 +145,6 @@
                 <li v-if="loaded" class="nav-item">
                     <a class="nav-link" href="#mh-mention">Mention</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#mh-contact">Contact</a>
-                </li>
               </ul>
             </div>
           </nav>
@@ -257,7 +254,7 @@
                 class="btn btn-fill wow fadeInUp mt-3"
                 data-wow-duration="0.8s"
                 data-wow-delay="0.4s"
-                >WhatsApp Me
+                >Chat Me Up
               </a>
               <a
                   href="mailto:darlingtongospel@gmail.com?body=Hi Daltonic, I was browsing your website and wanted to connect.&subject=Partnership Proposal"
@@ -886,125 +883,6 @@
     <footer class="mh-footer" id="mh-contact">
       <div class="map-image image-bg">
         <div class="container">
-          <div class="row section-separator">
-            <div
-              class="col-sm-12 section-title wow fadeInUp"
-              data-wow-duration="0.8s"
-              data-wow-delay="0.2s"
-            >
-              <h3>Contact Me</h3>
-            </div>
-            <div class="col-sm-12 mh-footer-address">
-              <div class="row">
-                <div class="col-sm-12 col-md-4">
-                  <div
-                    class="mh-address-footer-item dark-bg shadow-1 wow fadeInUp"
-                    data-wow-duration="0.8s"
-                    data-wow-delay="0.3s"
-                  >
-                    <div class="each-icon">
-                      <i class="fa fa-location-arrow"></i>
-                    </div>
-                    <div class="each-info">
-                      <h4>Address</h4>
-                      <address>
-                        7B Adagorge Rd, 500262, Port Harcourt, NG
-                      </address>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-12 col-md-4">
-                  <div
-                    class="mh-address-footer-item dark-bg shadow-1 wow fadeInUp"
-                    data-wow-duration="0.8s"
-                    data-wow-delay="0.5s"
-                  >
-                    <div class="each-icon">
-                      <i class="fa fa-envelope-o"></i>
-                    </div>
-                    <div class="each-info">
-                      <h4>Email</h4>
-                      <a href="mailto:darlingtongospel@gmail.com"
-                        >darlingtongospel@gmail.com</a
-                      >
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-12 col-md-4">
-                  <div
-                    class="mh-address-footer-item dark-bg shadow-1 wow fadeInUp"
-                    data-wow-duration="0.8s"
-                    data-wow-delay="0.7s"
-                  >
-                    <div class="each-icon">
-                      <i class="fa fa-phone"></i>
-                    </div>
-                    <div class="each-info">
-                      <h4>Phone</h4>
-                      <a href="callto:(+234)-810-605-6545"
-                        >(+234)-810-605-6545</a
-                      >
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div
-              class="col-sm-12 wow fadeInUp"
-              data-wow-duration="0.8s"
-              data-wow-delay="0.3s"
-            >
-              <form
-                id="contact-form"
-                class="single-form quate-form wow fadeInUp"
-                data-toggle="validator"
-              >
-                <div id="msgSubmit" class="h3 text-center hidden"></div>
-                <div class="row">
-                  <div class="col-md-12 col-sm-12">
-                    <input
-                      name="name"
-                      class="contact-name form-control"
-                      id="from_name"
-                      type="text"
-                      placeholder="Fullname"
-                      required
-                    />
-                  </div>
-                  <div class="col-sm-12">
-                    <input
-                      name="email"
-                      class="contact-subject form-control"
-                      id="email"
-                      type="email"
-                      placeholder="Your Email"
-                      required
-                    />
-                  </div>
-                  <div class="col-sm-12">
-                    <textarea
-                      name="message"
-                      class="contact-message"
-                      id="message"
-                      rows="6"
-                      placeholder="Your Message"
-                      required
-                    ></textarea>
-                  </div>
-                  <!-- Subject Button -->
-                  <div class="btn-form col-sm-12">
-                    <button
-                      type="submit"
-                      class="btn btn-fill btn-block"
-                      id="form-submit"
-                    >
-                      Send Message
-                    </button>
-                  </div>
-                </div>
-              </form>
-            </div>
-            </div>
             <div
               class="col-sm-12 mh-copyright wow fadeInUp"
               data-wow-duration="0.8s"
