--- a/index.html
+++ b/index.html
@@ -226,26 +226,26 @@
                   data-wow-duration="0.8s"
                   data-wow-delay="0.7s"
                 >
-                  <li>
+                  <li class="mr-4">
                     <a href="https://fb.com/darlington.gospel01" target="_blank">
-                      <i class="fa fa-facebook"></i></a>
+                      <i class="fab fa-facebook"></i></a>
                   </li>
-                  <li>
+                  <li class="mr-4">
                     <a href="https://twitter.com/idaltonic" target="_blank">
-                      <i class="fa fa-twitter"></i></a>
+                      <i class="fab fa-twitter"></i></a>
                   </li>
-                  <li>
-                    <a href="https://github.com/Daltonic" target="_blank">
-                      <i class="fa fa-github"></i></a>
-                  </li>
-                  <li>
+                  <li class="mr-4">
                     <a
                       href="https://www.linkedin.com/in/darlington-gospel-aa626b125" target="_blank">
-                      <i class="fa fa-linkedin"></i></a>
+                      <i class="fab fa-linkedin"></i></a>
                   </li>
-                  <li>
+                  <li class="mr-4">
+                    <a href="https://github.com/Daltonic" target="_blank">
+                      <i class="fab fa-github"></i></a>
+                  </li>
+                  <li class="mr-4">
                     <a href="https://darlingtongospel.medium.com/" target="_blank">
-                      <i class="fa fa-medium"></i></a>
+                      <i class="fab fa-medium"></i></a>
                   </li>
                 </ul>
                 <a
@@ -271,8 +271,8 @@
                 data-wow-duration="0.8s"
                 data-wow-delay="0.6s"
               >
-                <div class="img-border">
-                  <img src="assets/images/hero.png" alt="" class="img-fluid" />
+                <div class="">
+                  <img src="assets/images/hero.jpg" alt="" class="img-fluid" />
                 </div>
               </div>
             </div>
@@ -334,14 +334,14 @@
                   <li><span>HTML</span></li>
                   <li><span>CSS</span></li>
                   <li><span>JavaScript</span></li>
-                  <li><span>PHP</span></li>
-                  <li><span>Wordpress</span></li>
+                  <li><span>Blockchain</span></li>
                   <li><span>ReactJs</span></li>
                   <li><span>ReactNative</span></li>
                   <li><span>VueJs</span></li>
-                  <li><span>AngularJs</span></li>
                   <li><span>NextJs</span></li>
                   <li><span>NodeJs</span></li>
+                  <li><span>AngularJs</span></li>
+                  <li><span>PHP</span></li>
                 </ul>
               </div>
               <a
@@ -464,6 +464,17 @@
                   <div class="candidatos">
                     <div class="parcial">
                       <div class="info">
+                        <div class="nome">Blockchain</div>
+                        <div class="percentagem-num">80%</div>
+                      </div>
+                      <div class="progressBar">
+                        <div class="percentagem" style="width: 80%"></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="candidatos">
+                    <div class="parcial">
+                      <div class="info">
                         <div class="nome">PHP</div>
                         <div class="percentagem-num">74%</div>
                       </div>
@@ -480,17 +491,6 @@
                       </div>
                       <div class="progressBar">
                         <div class="percentagem" style="width: 70%"></div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="candidatos">
-                    <div class="parcial">
-                      <div class="info">
-                        <div class="nome">WordPress</div>
-                        <div class="percentagem-num">80%</div>
-                      </div>
-                      <div class="progressBar">
-                        <div class="percentagem" style="width: 80%"></div>
                       </div>
                     </div>
                   </div>
