--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 Gospel Darlington kick-started his journey as a software engineer in 2016.
                 Over the years, he has grown full-blown skills in
                 JavaScript stacks such as React,
-                ReactNative, VueJs, and more.
+                ReactNative, VueJs, and now blockchain.
                 <br /><br />
                 He is currently freelancing, building apps for clients,
                 and writing technical tutorials teaching
@@ -391,7 +391,7 @@
                         <i class="fa fa-user-graduate sky-color"></i>
                         <h3>Code Instructorship</h3>
                         <p>
-                          Do you want to learn coding in a one-on-one mentorship session? I will privately coach you from a complete beginner to a master at a flexible schedule.
+                          Do you want to learn coding in a group mentorship session? I will privately coach you from a complete beginner to a master at a flexible schedule.
                         </p>
                     </div>
                 </div>
@@ -403,7 +403,7 @@
                 class="btn btn-fill wow fadeInUp mt-3"
                 data-wow-duration="0.8s"
                 data-wow-delay="0.4s"
-                >Hire Me</a>
+                >Mentor Me</a>
             </div>
         </div>
      </section>   
